# final-project-level3-recsys-13

./: .gitattributes  .gitignore  README.md  requirements.txt
Data Analysis/: data_analytics.ipynb
airflow/: README.md  Readme.md  airflow.cfg  airflow.db  info.yaml  makefile
backend/: Dockerfile  README.md  docker-compose.yml  egg.sh  pyproject.toml  requirements.txt
cicd/: build.sh  build_webhook.py  deploy.sh  deploy_webhook.py  docker-compose.yml  pyproject.toml
docker-builder/: build_webhook.py  deploy_webhook.py  docker-compose.yml
frontend/: Dockerfile  Makefile  Readme.md  config.py  frontend.py  homePage.py  main.py  package-lock.json  package.json  pyproject.toml  recThemePage.py  recommendPage.py  signinPage.py  signupPage.py
frontend/public/: index.html
frontend/src/: App.css  index.js  setupProxy.js
frontend/src/pages/: TopBar.js  dialog.js  hanggi.css  ingredients.json  mainCard.js  mainPage.js  myPage.js  recPage.js  recipePage.js  signin.js  signup.js  themePage.js
modeling/: README.md  args.py  data_split.py  dataloader.py  experiments.csv  inference.py  inference_trigger.py  makefile  pyproject.toml  similar_answer.py  test_time_evaluation_test.ipynb  train.py  utils.py
modeling/RecBole/: __init__.py  make_npy_file.py  run_recbole.py  test.ipynb
modeling/RecBole/recbole/properties/: overall.yaml
modeling/RecBole/recbole/quick_start/: quick_start.py
modeling/core/: config.py  config.yaml
modeling/foodcomImplicit/: ALS.ipynb  __init__.py  dataloader.py  dataset.py  recommender.py  trainer.py
modeling/foodcomItem2Vec/: bert2vec.py
modeling/foodcomTorch/: __init__.py  dataloader.py  metric.py  model.py  scheduler.py  trainer.py
modeling/modeling_utils/: __init__.py
(+29 files in other folders)
