[tool.poetry]
name = "front"
version = "0.1.0"
description = ""
authors = ["SNMHZ <snmhz325@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.5"
streamlit = "^1.9.2"
PyYAML = "^6.0"
python-dotenv = "^0.20.0"
streamlit-modal = "^0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
